--- a/Hola/source/Hola/Hola.csproj
+++ b/Hola/source/Hola/Hola.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Code\CodeParser.cs" />
     <Compile Include="Code\CodeFormatProvider.cs" />
     <Compile Include="Structures\Graph.cs" />
-    <Compile Include="Structures\SuffixTree.cs" />
+    <Compile Include="Structures\Bor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
