Добавил поддержку сигнатур

--- a/Hola/source/Hola/Hola.csproj
+++ b/Hola/source/Hola/Hola.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Code\Analyze\LevenshteinCodeAnalyzer.cs" />
     <Compile Include="Code\Analyze\SuffixTreeCodeAnalyzer.cs" />
     <Compile Include="Code\CodeComparer.cs" />
+    <Compile Include="Code\Signatures.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\CodeParser.cs" />
